[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]

[project]
name = "spindel"
version = "0.1.0"
description = "Tcp / http / ws server and client"
dependencies = []
requires-python = ">=3.12"

[project.optional-dependencies]
test = ["termcolor"]
dev = ["termcolor", "ruff", "wheel"]

[tool.ruff]
line-length = 110
ignore = [
    "E402", # Module level import not at top of file
    "E501", # Line too long
]
